--- a/index.html
+++ b/index.html
@@ -5,8 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="info">
+        <img src="https://avatars.githubusercontent.com/u/84467595?v=4" alt="тут мое фото" class="avatar" >  
+        <h1>Илья Кузнецов</h1>
+        <p>Изучаю программирование <strong> Javascript, Html и CSS</strong></p>
+        <p>Прохожу обучение в <a target="_blank" href="https://elbrusboot.camp/">Elbrusboot.camp</a></p>
+        <p>Я люблю активный образ жизни и котиков</p>
+        </div> 
+        <h2>Мои социальные сети</h2>
+                <a target="_blank" href="https://github.com/IlyaGr33nn">GitHub<img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github" width="20"></a>
+                <a target="_blank" href="https://vk.com/idz7160945">VK<img src="https://pngimg.com/uploads/vkontakte/small/vkontakte_PNG23.png" alt="vk" width="20"></a>
+                <a target="_blank" href="https://t.me/G_R33n">Telegram<img src="https://web.telegram.org/img/logo_share.png" alt="Telegram" width="20"></a>
+        <h2>Мои хобби</h2>
+        <div class="info">
+            <ol type="I">
+                <li>Программирование</li> 
+                <li>Спорт: Бокс, ММА, зал</li>
+                <li>Изучение английского языка</li>
+                <li>Литература: Р.Брэдбери, Ф.С.Фицджеральд, Д.Лондон</li>
+            </ol>
+        </div>
+    
+        <h2>Опыт</h2>
+        <table>
+        <tr>
+            <th>Компания</th>
+            <th>Должность</th>
+            <th>Год</th>
+        </tr>
+        <tr>
+            <td>Правительсвто Лен.Области</td>
+            <td>Главный специалист</td>
+            <td>2018-2019</td>
+        </tr >
+        <tr>
+            <td>Ленавтодор</td>
+            <td>Главный специалист отдела закупок</td>
+            <td>2019-2020</td>
+        </tr >
+        <tr>
+            <td>ООО Арлекино</td>
+            <td>Интернет маркетолог-аналитик</td>
+            <td>2020-2022</td>
+        </tr>
+        </table>
+    </div>
 </body>
 </html>
+
