--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="background"></div>
     <div class="container">
         <div class="info">
         <img src="https://avatars.githubusercontent.com/u/84467595?v=4" alt="тут мое фото" class="avatar" >  
