--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="background"></div>
     <div class="container">
         <div class="info">
-        <img src="https://avatars.githubusercontent.com/u/84467595?v=4" alt="тут мое фото" class="avatar" >  
+        <img src="https://avatars.githubusercontent.com/u/84467595?v=4" alt="Мое фото" class="avatar" >  
         <h1>Илья Кузнецов</h1>
-        <p>Изучаю программирование <strong> Javascript, Html и CSS</strong></p>
+        <p>Изучаю программирование: Javascript, Html и CSS</p>
         <p>Прохожу обучение в <a target="_blank" href="https://elbrusboot.camp/">Elbrusboot.camp</a></p>
         <p>Я люблю активный образ жизни и котиков</p>
         </div> 
